relevant text added to all section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <div class="bg-[#131318] rounded-xl p-8 w-[500px] lg:absolute right-0 top-[60%] mr-8">
           <h3 class="text-white text-2xl font-extrabold">Meet all the heroes from the field</h3>
-          <p class="text-[#696464]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          <p class="text-[#696464]">Hockey is most famous in our country. By this way those who play hockey they are our nation heros. </p>
         </div>
       </section>
     </header>
@@ -118,7 +118,7 @@
                   Prayer Facility
                 </h3>
                 <p class="w-[250px] mx-auto">
-                  Amet consectetur. Condimentum dignissim adipiscing .
+                  we never compromise about to give prayer facility.
                 </p>
               </div>
             </div>
@@ -136,7 +136,7 @@
                     Experienced Coach
                 </h3>
                 <p class="w-[250px] mx-auto">
-                  Amet consectetur. Condimentum dignissim adipiscing .
+                  we have most experience and famous coach for better service.
                 </p>
               </div>
             </div>
@@ -154,7 +154,7 @@
                     Senior Player
                 </h3>
                 <p class="w-[250px] mx-auto">
-                  Amet consectetur. Condimentum dignissim adipiscing .
+                  We respect our senior player,they share there experience.
                 </p>
               </div>
             </div>
@@ -172,7 +172,7 @@
                     Training Ground
                 </h3>
                 <p class="w-[250px] mx-auto">
-                  Amet consectetur. Condimentum dignissim adipiscing .
+                  Training ground are made by the bes consaltent in the wold.
                 </p>
               </div>
             </div>
@@ -187,8 +187,7 @@
               Program Sections
             </h3>
             <p class="lg:w-[700px] w-[300px] mx-auto text-[#131318] py-3">
-              Rounded progress var is added to our service batter and we are
-              promised to provide <br />
+              To create a great impact in Hockey we start to plan about hoe to give good service<br />
               our service well
             </p>
           </div>
@@ -217,8 +216,8 @@
                     Teenager Program
                 </h3>
                 <p class="font-semibold text-white py-6">
-                  In this program we will teach you, <br />
-                  how to start playing hockey.stay humble learn more.
+                  those who complete there early stage<br /> we start to provide them better service in Teenager ground
+                  
                 </p>
                 <button class="bg-[#FF4240] text-white py-3 px-12 rounded-lg">
                   Get Ticket
@@ -254,8 +253,7 @@
                 Our New Products
             </h3>
             <p class="lg:w-[700px] w-[300px] mx-auto text-[#131318] py-3">
-              Rounded progress var is added to our service batter and we are
-              promised to provide <br />
+              Our new items are ready to give you new experience about this.We make <br />
               our service well
             </p>
             <hr />
@@ -280,10 +278,10 @@
                   </div>
                   <div>
                     <h3 class="py-2 text-[#131318] font-extrabold text-2xl">
-                      World Cup Flags Football
+                      Cap For Hockeys
                     </h3>
                     <p>
-                      Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                      This cap will help you to protect your eyes from sun.
                     </p>
                   </div>
                   <div class="flex items-center gap-2">
@@ -311,10 +309,10 @@
                   </div>
                   <div>
                     <h3 class="py-2 text-[#131318] font-extrabold text-2xl">
-                      World Cup Flags Football
+                      World Cup cricket
                     </h3>
                     <p>
-                      Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                      This cricket cap use to protect you head.
                     </p>
                   </div>
                   <div class="flex items-center gap-2">
@@ -345,7 +343,7 @@
                       World Cup Flags Football
                     </h3>
                     <p>
-                      Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                      This a good jersey to wear fell comport.
                     </p>
                   </div>
                   <div class="flex items-center gap-2">
@@ -379,7 +377,7 @@
                       World Cup Flags Football
                     </h3>
                     <p>
-                      Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                      This a football circle live a glove.
                     </p>
                   </div>
                   <div class="flex items-center gap-2">
@@ -410,7 +408,7 @@
                       World Cup Flags Football
                     </h3>
                     <p>
-                      Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                      This is another one the best jersey we made.
                     </p>
                   </div>
                   <div class="flex items-center gap-2">
@@ -441,7 +439,7 @@
                       World Cup Flags Football
                     </h3>
                     <p>
-                      Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                      This football is as same as world class football.
                     </p>
                   </div>
                   <div class="flex items-center gap-2">
@@ -464,9 +462,8 @@
             Clients Question
           </h3>
           <p class="lg:w-[700px] w-[300px] mx-auto text-[#131318] py-3">
-            Rounded progress var is added to our service batter and we are
-            promised to provide <br />
-            our service well
+            You will get your answer from this section.any type of question <br />
+            about ourservice well
           </p>
           <hr />
         </div>
@@ -540,9 +537,8 @@
               Get In Touch
             </h3>
             <p class="lg:w-[700px] w-[300px] mx-auto text-[#131318] py-3">
-              Rounded progress var is added to our service batter and we are
-              promised to provide <br />
-              our service well
+              To know about more you call call mail or come for<br />
+              our service.
             </p>
             <hr />
           </div>
@@ -559,20 +555,20 @@
               </div>
               <!-- 2nd touch -->
               <div class="py-9 pr-28 pl-8 bg-[#fddd5f1a] my-4">
-                <i class="fa-solid fa-phone text-4xl text-green-500"></i>
+                <i class="fa-solid fa-envelope-open text-4xl text-green-500"></i>
                 <p class="pt-4 text-[ #131318]">
-                  Phone Number : <br />
+                  Email : <br />
                   <span class="font-extrabold text-[#131318]"
-                    >(+62) 123-321-543</span>
+                    >hockeys@support.com</span>
                 </p>
               </div>
               <!-- 3rd touch -->
               <div class="py-9 pr-28 pl-8 bg-[#E3F2FD]">
-                <i class="fa-solid fa-phone text-4xl text-green-500"></i>
+                <i class="fa-solid fa-location-dot text-4xl text-green-500"></i>
                 <p class="pt-4 text-[ #131318]">
-                  Phone Number : <br />
+                  Location :  <br />
                   <span class="font-extrabold text-[#131318]"
-                    >(+62) 123-321-543</span>
+                    >152/1 Mohakhali Wireless Gate</span>
                 </p>
               </div>
             </div>
@@ -669,20 +665,20 @@
         </p>
       </nav>
       <nav>
-        <header class="footer-title">Company</header>
+        <header class="text-2xl font-bold">Company</header>
         <a class="link link-hover">About us</a>
         <a class="link link-hover">Contact</a>
         <a class="link link-hover">Jobs</a>
         <a class="link link-hover">Press kit</a>
       </nav>
       <nav>
-        <header class="footer-title">Support</header>
+        <header class="text-2xl font-bold">Support</header>
         <a class="link link-hover">Terms of use</a>
         <a class="link link-hover">Privacy policy</a>
         <a class="link link-hover">Cookie policy</a>
       </nav>
       <nav>
-        <header class="footer-title">Services</header>
+        <header class="text-2xl font-bold">Services</header>
         <a class="link link-hover">Terms of use</a>
         <a class="link link-hover">Privacy policy</a>
         <a class="link link-hover">Cookie policy</a>
